src/objects/tdc_tsw__Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>tdc_tsw__Folder__c</referenceTo>
        <relationshipLabel>SMS Template</relationshipLabel>
        <relationshipName>SMS_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Next_SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next SMS Template</label>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>SMS Template</relationshipLabel>
        <relationshipName>SMS_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMSBodyNew__c</fullName>
        <label>SMS Body</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Survey</label>
        <referenceTo>tdc_tsw__SMS_Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>SMS_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Automation</fullName>
                    <label>Automation Only</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tsw__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SMS Template</label>
    <listViews>
        <fullName>tdc_tsw__All</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__ObjectName__c</columns>
        <columns>tdc_tsw__SMSBodyNew__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Template</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>